# foldity

./: Cargo.toml  LICENSE  README.md
src/: cmdline.rs  display.rs  main.rs  program.rs  util.rs
test/: data.txt  pair-file.txt
