[package]
name = "foldity"
version = "0.1.0"
authors = ["Dan Aloni"]
edition = "2018"

[dependencies]
structopt = "0.3"
anyhow = "1"
thiserror = "1"
regex = "1.4"
termion = "1.5"
async-std = "1.7"
futures = "0.3"
slab = "0.4"
itertools = "0.9"
smallvec = "1.4"
async-ctrlc = { version = "1.2", features = ["stream"] }
lazy_static = "1"
shell-escape = "0.1"
